Version 1.3.4
 Added:
  - Add WINE env var to console environment [BUG-91];
 Fixed:
  - Console launch environment uses dead setting fields [BUG-90];

Version 1.3.3
 Fixed:
  - Problem opening file dialog to mount ISO [BUG-86];

Version 1.3.2
 Fixed:
  - [regression, bisected] Icon information is not displayed correctly [BUG-80];
  - Winetricks does not update [BUG-77];
  - First startup wizard (quick mount profile): profile strings are initially empty if fuseiso is not installed [BUG-81];
  - Download (latest) Winetricks from GitHub [BUG-82];
  - Correct proxy-related environment variables in Winetricks plugin [BUG-83];
  - Use env command in the command line to download Winetricks [BUG-83];
  - Support proxy username/password in Winetricks plugin [BUG-83];
  - Treat aarch64 as 64 bit platform and put libraries in lib64 directory [BUG-85];

Version 1.3.1
 Added:
  - Allow to execute and create icons for *.bat and *.msi files [BUG-69];
  - Added Chinese (China) translation (thx 2 Mingye Wang and Mingcong Bai);
  - Added Japanese translation (thx 2 Masanori Kakura);

 Fixed:
  - Renamed 'New' menu option for icon and prefix view to 'New icon' and 'New
  folder' respectively to avoid confusion [BUG-69];
  - Icon description is not exported into *.desktop file [BUG-69];
  - Winetrick's item description label doesn't wrap properly [BUG-71];
  - Qt5: detailed view item selection duplicate [BUG-75];
  - q4wine-cli does not accept extra app arguments [BUG-78];
  - Translation files moved from i18n to l10n;
  - Hide deprecated prefix options if values are not set;

Version 1.3
 Added:
  - Taiwan translation (thx 2 Jeff Huang);
  - Use icons from the system icon theme where possible [BUG-22];
  - Replace default raster icons with SVG analogs [BUG-21];
  - Extend App icons zoom sizes up to 512px [BUG-21];
  - Allow to choose *.svg and *.svgz images for icons [BUG-21];
  - Add an app option to switch default/ambiance-light/ambiance-dark icon [BUG-21];