@@ -356,7 +356,7 @@ void IconSettings::cmdGetProgram_Click(){
       dialog.setWindowTitle(tr("Open Exe file"));
       dialog.setDirectory(searchPath);
       dialog.setFileMode(QFileDialog::ExistingFile);
-      dialog.setNameFilter(tr("Exe, MSI, BAT files (*.exe *.msi *.bat);;Exe files (*.exe);;MSI files (*.msi);;BAT files (*.bat)"));
+      dialog.setNameFilter(tr("Exe, MSI, BAT files (*.exe *.msi *.bat);;Exe files (*.exe);;MSI files (*.msi);;BAT files (*.bat);;All files (*)"));
 
 
 #if QT_VERSION >= 0x040500
@@ -433,7 +433,7 @@ void IconSettings::cmdGetIcon_Click(){
         #ifndef WITH_ICOUTILS
         dialog.setNameFilter(tr("Image files (*.png *.jpg *.gif *.bmp *.xpm *.svg *.svgz)"));
         #else
-        dialog.setNameFilter(tr("Image and Win32 binary files (*.png *.jpg *.gif *.bmp *.xpm *.exe *.dll);;Image files (*.png *.jpg *.gif *.bmp *.xpm *.svg *.svgz);;Win32 Executable (*.exe);;Win32 Shared libraries (*.dll);;Win32 Executable and Shared libraries (*.exe *.dll)"));
+        dialog.setNameFilter(tr("Image and Win32 binary files (*.png *.jpg *.gif *.bmp *.xpm *.exe *.dll);;Image files (*.png *.jpg *.gif *.bmp *.xpm *.svg *.svgz);;Win32 Executable (*.exe);;Win32 Shared libraries (*.dll);;Win32 Executable and Shared libraries (*.exe *.dll);;All files (*)"));
         #endif
       //dialog.setSidebarUrls(add_prefix_urls);
 
