@@ -3,6 +3,7 @@ Version 1.3.4
   - Add WINE env var to console environment [BUG-91];
  Fixed:
   - Console launch environment uses dead setting fields [BUG-90];
+  - Q4Wine file selectors filters files with upper case extension [BUG-94];
 
 Version 1.3.3
  Fixed:
